--- a/index.html
+++ b/index.html
@@ -9,57 +9,50 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <title>Document</title>
+    <title> Better Count Your Gems! </title>
 </head>
 
 <body>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <!-- nothing here -->
-            </div>
-            <div class="col-md-4 centered">
+            <div class="col-md-12 text-center">
                 <h1> Number to hit to win! </h1>
                 <p id="compGuess"> ...loading... </p>
                 <button id=play> Click me to play! </button>
             </div>
-            <div class="col-md-4">
-                <!-- nothing here -->
-            </div>
         </div>
+        <br><br><br>
+
         <div class="row">
             <div class="col-md-3">
-                <!-- <img> --> <button id="button1"></button>
+                <img class="add" id="button1" src="assets/images/gem2.png" alt="gem1" width="100px" height="100px"> 
             </div>
             <div class="col-md-3">
-                <!-- <img> --> <button id="button2"></button>
+                <img button class="add" id="button2" src="assets/images/gem3.png" alt="gem2" width="100px" height="100px"> 
             </div>
             <div class="col-md-3">
-                <!-- <img> --> <button id="button3"></button>
+               <img class="add" id="button3" src="assets/images/gem4.png" alt="gem3" width="100px" height="100px"> 
             </div>
             <div class="col-md-3">
-                <!-- <img> --> <button id="button4"></button>
+                <img button class="add" id="button4" src="assets/images/gem1.png" alt="gem4" width="100px" height="100px">
             </div>
         </div>
+        <br><br><br>
+
         <div class="row">
-            <div class="col-md-4">
-                <!-- nothing here -->
-            </div>
-            <div class="col-md-4 centered">
+            <div class="col-md-12 text-center">
                 <h1> This is your current number </h1>
-                <p> ... </p>
-            </div>
-            <div class="col-md-4">
-                <!-- nothing here -->
+                <p id="totalNum"> ... </p>
             </div>
         </div>
+        <br><br><br>
         <div class="row">
             <div class="col-md-6">
-                <h2>Wins: </h2>
+                <h2 id="wins">Wins: </h2>
             </div>
             <div class="col-md-6">
-                <h2>Losses: </h2>
+                <h2 id="losses">Losses: </h2>
             </div>
         </div>
 
